Changed to use new sulky-tasks.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@159 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -256,6 +256,12 @@
 
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.tasks</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.io</artifactId>
 			<scope>compile</scope>
 		</dependency>
