--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -262,6 +262,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>de.huxhorn.sulky</groupId>
+				<artifactId>de.huxhorn.sulky.tasks</artifactId>
+				<version>${sulkyVersion}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>commons-cli</groupId>
 				<artifactId>commons-cli</artifactId>
 				<version>1.0</version>
