Added FilteringBuffer, FilterJob and SoftReferenceCachingBuffer to main lilith module.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@167 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -145,7 +145,7 @@
 				<artifactId>de.huxhorn.lilith.logback.classic</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.appender.multiplex-core</artifactId>
@@ -265,6 +265,11 @@
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.tasks</artifactId>
+				<version>${sulkyVersion}</version>
+			</dependency>
+			<dependency>
+				<groupId>de.huxhorn.sulky</groupId>
+				<artifactId>de.huxhorn.sulky.conditions</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
 
