Added log4j module.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@179 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<module>lilith-engine</module>
 		<module>lilith-xml-logging</module>
 		<module>logback</module>
+		<module>log4j</module>
 		<module>lilith-sounds</module>
 		<module>lilith</module>
 	</modules>
