Changed XML format identifier. Added more performance tests. Added aggregation of javadoc to master.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@181 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,44 @@
 		<module>lilith</module>
 	</modules>
 
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+					<javadocDir>target/site/apidocs/</javadocDir>
+					<linkJavadoc>true</linkJavadoc>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+					<links>
+						<link>
+							http://java.sun.com/j2se/1.5.0/docs/api
+						</link>
+					</links>
+					<groups>
+						<group>
+							<title>Lilith</title>
+							<packages>de.huxhorn.lilith:de.huxhorn.lilith.*</packages>
+						</group>
+						<group>
+							<title>Sulky</title>
+							<packages>de.huxhorn.sulky:de.huxhorn.sulky.*</packages>
+						</group>
+					</groups>
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+	</reporting>
+
+
 </project>
 
