--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -299,19 +299,19 @@
 			<artifactId>commons-httpclient</artifactId>
 			<scope>compile</scope>
 			<!-- This will likely move to:
-					 <groupId>org.apache.httpcomponents</groupId>
-					 <artifactId>httpclient</artifactId>
-					 <version>4.0</version>
-					 -->
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.0</version>
+			-->
 		</dependency>
 
 		<!--
-			  <dependency>
-				  <groupId>svg-salamander</groupId>
-				  <artifactId>svg-salamander-tiny</artifactId>
-				  <version>1.0.0</version>
-			  </dependency>
-			  -->
+		<dependency>
+			<groupId>svg-salamander</groupId>
+			<artifactId>svg-salamander-tiny</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		-->
 
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
@@ -331,21 +331,26 @@
 			<artifactId>de.huxhorn.lilith.3rdparty.flyingsaucer.core-renderer</artifactId>
 			<version>8Pre2</version>
 			<!--
-					 <groupId>flyingsaucer</groupId>
-					 <artifactId>core-renderer</artifactId>
-					 <version>8Pre2</version>
-					 -->
+			<groupId>flyingsaucer</groupId>
+			<artifactId>core-renderer</artifactId>
+			<version>8Pre2</version>
+			-->
 			<scope>compile</scope>
 		</dependency>
 
 		<!--
-				<dependency>
-					<groupId>org.swinglabs</groupId>
-					<artifactId>swingx</artifactId>
-					<version>0.9.2</version>
-				</dependency>
-				-->
+		<dependency>
+			<groupId>org.swinglabs</groupId>
+			<artifactId>swingx</artifactId>
+			<version>0.9.2</version>
+		</dependency>
+		-->
 
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.data.logging-xml-serializer</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
