Started work on protobuf Serializer/Deserializer. Still in progress. Added some TODOs to LoggingEvent.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@185 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-data/pom.xml
+++ b/lilith-data/pom.xml
@@ -42,6 +42,7 @@
 		<module>logging</module>
 		<module>logging-xml</module>
 		<module>logging-xml-serializer</module>
+		<module>logging-protobuf</module>
 		<module>access</module>
 	</modules>
 
