Finished protobuf serializer implementation. See ticket:40.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@188 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -130,6 +130,12 @@
 
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.data.logging.protobuf</artifactId>
+				<version>${lilithVersion}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.data.logging</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
