Codec and Protobuf stuff. Made sure that everything works on JDK<1.6, again. Fixed dependency problem.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@190 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/logback/multiplex-appender-classic/pom.xml
+++ b/logback/multiplex-appender-classic/pom.xml
@@ -34,6 +34,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.data.logging.protobuf</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.logback.appender.multiplex-core</artifactId>
 			<scope>compile</scope>
 		</dependency>
