--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -107,6 +107,13 @@
 	</build>
 
 	<dependencies>
+<!--
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.data.logging-xml-serializer</artifactId>
+			<scope>compile</scope>
+		</dependency>
+-->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -353,11 +360,6 @@
 		</dependency>
 		-->
 
-		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.data.logging-xml-serializer</artifactId>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
