generic.io => sulky-codec.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@191 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/logback/multiplex-appender-core/pom.xml
+++ b/logback/multiplex-appender-core/pom.xml
@@ -46,7 +46,7 @@
 
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
-			<artifactId>de.huxhorn.sulky.generics</artifactId>
+			<artifactId>de.huxhorn.sulky.codec</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
