--- a/lilith-engine/pom.xml
+++ b/lilith-engine/pom.xml
@@ -74,7 +74,7 @@
 
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
-			<artifactId>de.huxhorn.sulky.generics</artifactId>
+			<artifactId>de.huxhorn.sulky.codec</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
