--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -228,7 +228,7 @@
 
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
-				<artifactId>de.huxhorn.sulky.generics</artifactId>
+				<artifactId>de.huxhorn.sulky.codec</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
 
