Updated to use new codec-filebuffer module.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@194 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-engine/pom.xml
+++ b/lilith-engine/pom.xml
@@ -56,7 +56,7 @@
 
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
-			<artifactId>de.huxhorn.sulky.buffers</artifactId>
+			<artifactId>de.huxhorn.sulky.codec.filebuffer</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
