--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -273,9 +273,16 @@
 				<artifactId>de.huxhorn.sulky.tasks</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
+
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.conditions</artifactId>
+				<version>${sulkyVersion}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>de.huxhorn.sulky</groupId>
+				<artifactId>de.huxhorn.sulky.codec.filebuffer</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
 
