Preparing proper benchmark app, will later include Cekis corpus.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@195 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -240,6 +240,12 @@
 
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
+				<artifactId>de.huxhorn.sulky.formatting</artifactId>
+				<version>${sulkyVersion}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.io</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
