--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -305,6 +305,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>com.google.protobuf</groupId>
+				<artifactId>protobuf-java</artifactId>
+				<version>2.0.3</version>
+			</dependency>
+
+			<dependency>
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
 				<version>2.3</version>
