--- a/lilith-data/pom.xml
+++ b/lilith-data/pom.xml
@@ -44,6 +44,7 @@
 		<module>logging-xml-serializer</module>
 		<module>logging-protobuf</module>
 		<module>access</module>
+		<module>access-protobuf</module>
 	</modules>
 
 </project>
