Work in progress concerning access events.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@205 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-engine/pom.xml
+++ b/lilith-engine/pom.xml
@@ -55,6 +55,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.data.access.protobuf</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.codec.filebuffer</artifactId>
 			<scope>compile</scope>
