Fixed LogbackAccessStreamEventProducer. Prettified protobuf files. String array may now contain null values.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@206 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/logback/event-producers/pom.xml
+++ b/logback/event-producers/pom.xml
@@ -64,6 +64,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.logback.access-adapter</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.buffers</artifactId>
 			<scope>compile</scope>
