Ongoing work concerning AccesEvents.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@208 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/logback/multiplex-appender-access/pom.xml
+++ b/logback/multiplex-appender-access/pom.xml
@@ -42,6 +42,13 @@
 			<artifactId>de.huxhorn.lilith.data.access</artifactId>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.data.access.protobuf</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.logback.access-adapter</artifactId>
