Ongoing work concerning AccesEvents.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@209 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/logback/access-adapter/pom.xml
+++ b/logback/access-adapter/pom.xml
@@ -49,6 +49,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.codec</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
 			<scope>test</scope>
