Added missing assembly to logback-classic-sandbox.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@219 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/sandbox/logback-classic-sandbox/pom.xml
+++ b/sandbox/logback-classic-sandbox/pom.xml
@@ -30,8 +30,8 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>de.huxhorn.lilith.sandbox</mainClass>
-							<packageName>de.huxhorn.lilith.sandbox.LogbackClassicSandbox</packageName>
+							<mainClass>de.huxhorn.lilith.sandbox.LogbackClassicSandbox</mainClass>
+							<packageName>de.huxhorn.lilith.sandbox</packageName>
 							<addClasspath>true</addClasspath>
 						</manifest>
 						<manifestEntries>
