--- a/sandbox/log4j-sandbox/pom.xml
+++ b/sandbox/log4j-sandbox/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.sandbox.log4j</artifactId>
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
-	<name>Logback Classic Sandbox</name>
-	<description>This file is part of Lilith. It's a logback-classic sandbox.</description>
+	<name>Lo4j Sandbox</name>
+	<description>This file is part of Lilith. It's a log4j sandbox.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
-	
+
 	<scm>
-		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/sandbox/logback-classic-sandbox</connection>
-		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/sandbox/logback-classic-sandbox</developerConnection>
-		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/sandbox/logback-classic-sandbox/</url>
+		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/sandbox/log4j-sandbox</connection>
+		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/sandbox/log4j-sandbox</developerConnection>
+		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/sandbox/log4j-sandbox/</url>
 	</scm>
 
 	<parent>
@@ -94,7 +95,7 @@
 					<artifactId>jmxri</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
@@ -107,7 +108,7 @@
 			<artifactId>commons-lang</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
