Tentative try to define a clean Java5 logger interface. This is just a concept.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@223 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		<module>log4j</module>
 		<module>lilith-sounds</module>
 		<module>lilith</module>
+		<module>slf4j</module>
 	</modules>
 
 	<reporting>
