--- a/sandbox/logback-access-sandbox/pom.xml
+++ b/sandbox/logback-access-sandbox/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
-	<artifactId>de.huxhorn.lilith.sandbox.logback.classic</artifactId>
+	<artifactId>de.huxhorn.lilith.sandbox.logback.access</artifactId>
 	<version>${parent.version}</version>
 	<packaging>war</packaging>
 	<name>Logback Access Sandbox</name>
@@ -28,7 +28,7 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<persistentSource>1.5</persistentSource>
+					<source>1.5</source>
 					<target>1.5</target>
 				</configuration>
 			</plugin>
