--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -92,6 +92,7 @@
 				<artifactId>de.huxhorn.lilith.jul-slf4j-handler</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
+
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.sender</artifactId>
@@ -223,6 +224,12 @@
 				<artifactId>de.huxhorn.lilith.logback.servlet</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
+
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.log4j.xml</artifactId>
+				<version>${lilithVersion}</version>
+			</dependency>
 			<!--
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
@@ -344,10 +351,10 @@
 					</exclusion>
 				</exclusions>
 				<!-- This will likely move to:
-								<groupId>org.apache.httpcomponents</groupId>
-								<artifactId>httpclient</artifactId>
-								<version>4.0</version>
-								-->
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.0</version>
+				-->
 			</dependency>
 
 
@@ -362,6 +369,7 @@
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4jVersion}</version>
 			</dependency>
+
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>jcl-over-slf4j</artifactId>
@@ -379,11 +387,13 @@
 				<artifactId>logback-core</artifactId>
 				<version>${logbackVersion}</version>
 			</dependency>
+
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
 				<version>${logbackVersion}</version>
 			</dependency>
+
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-access</artifactId>
@@ -430,24 +440,24 @@
 				<version>2.1</version>
 			</plugin>
 			<!--
-					 <plugin>
-						 <groupId>org.apache.maven.plugins</groupId>
-						 <artifactId>maven-pmd-plugin</artifactId>
-						 <version>2.4</version>
-						 <configuration>
-							 <rulesets>
-								 <ruleset>/rulesets/basic.xml</ruleset>
-								 <ruleset>/rulesets/controversial.xml</ruleset>
-							 </rulesets>
-							 <format>xml</format>
-							 <linkXref>true</linkXref>
-							 <sourceEncoding>utf-8</sourceEncoding>
-							 <minimumTokens>100</minimumTokens>
-							 <targetJdk>1.5</targetJdk>
-						 </configuration>
-					 </plugin>
-					 endless loop on site generation of lilith :(
-					 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<rulesets>
+						<ruleset>/rulesets/basic.xml</ruleset>
+						<ruleset>/rulesets/controversial.xml</ruleset>
+					</rulesets>
+					<format>xml</format>
+					<linkXref>true</linkXref>
+					<sourceEncoding>utf-8</sourceEncoding>
+					<minimumTokens>100</minimumTokens>
+					<targetJdk>1.5</targetJdk>
+				</configuration>
+			</plugin>
+			endless loop on site generation of lilith :(
+			-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
@@ -458,10 +468,10 @@
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<version>1.2</version>
 				<!--
-							<configuration>
-								<threshold>High|Normal|Low|Exp|Ignore</threshold>
-							</configuration>
-							-->
+				<configuration>
+					<threshold>High|Normal|Low|Exp|Ignore</threshold>
+				</configuration>
+				-->
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -469,15 +479,15 @@
 				<version>2.0-beta-2</version>
 			</plugin>
 			<!--
-					 Can't handle
-					 @SuppressWarnings({"unchecked"})
-					 :(
-					 <plugin>
-						 <groupId>org.codehaus.mojo</groupId>
-						 <artifactId>javancss-maven-plugin</artifactId>
-						 <version>2.0-beta-2</version>
-					 </plugin>
-					 -->
+			Can't handle
+			@SuppressWarnings({"unchecked"})
+			:(
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>javancss-maven-plugin</artifactId>
+				<version>2.0-beta-2</version>
+			</plugin>
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-changes-plugin</artifactId>
@@ -511,9 +521,9 @@
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
 				<!--
-							<version>1.0-beta-4</version>
-							http://www.mail-archive.com/issues@maven.apache.org/msg42661.html
-							-->
+				<version>1.0-beta-4</version>
+				http://www.mail-archive.com/issues@maven.apache.org/msg42661.html
+				-->
 				<version>1.0-beta-2</version>
 			</extension>
 		</extensions>
@@ -610,12 +620,12 @@
 				</executions>
 			</plugin>
 			<!--
-					 <plugin>
-						 <groupId>org.mortbay.jetty</groupId>
-						 <artifactId>maven-jetty-plugin</artifactId>
-						 <version>6.1.2rc4</version>
-					 </plugin>
-					 -->
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.2rc4</version>
+			</plugin>
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-scm-plugin</artifactId>
@@ -629,14 +639,14 @@
 				<artifactId>maven-idea-plugin</artifactId>
 				<version>2.2</version>
 				<!--
-							use
-							-DdownloadSources=true -DdownloadJavadocs=true
-							when needed...
-							<configuration>
-								<downloadSources>true</downloadSources>
-								<downloadJavadocs>true</downloadJavadocs>
-							</configuration>
-							-->
+				use
+				-DdownloadSources=true -DdownloadJavadocs=true
+				when needed...
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+				</configuration>
+				-->
 			</plugin>
 		</plugins>
 	</build>
