--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -107,13 +107,13 @@
 	</build>
 
 	<dependencies>
-<!--
-		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.data.logging-xml-serializer</artifactId>
-			<scope>compile</scope>
-		</dependency>
--->
+		<!--
+		  <dependency>
+			  <groupId>de.huxhorn.lilith</groupId>
+			  <artifactId>de.huxhorn.lilith.data.logging-xml-serializer</artifactId>
+			  <scope>compile</scope>
+		  </dependency>
+  -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -233,7 +233,13 @@
 			<artifactId>de.huxhorn.lilith.logback.logging-adapter</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.log4j.xml</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
