Fixes ticket:49. FlyingSaucer updated to 8RC1.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@236 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -355,7 +355,7 @@
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.3rdparty.flyingsaucer.core-renderer</artifactId>
-			<version>8Pre2</version>
+			<version>8RC1</version>
 			<!--
 			<groupId>flyingsaucer</groupId>
 			<artifactId>core-renderer</artifactId>
