Updated help on appenders, adding link to dependencies. Removed deprecated tags. Fixed typo.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@240 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/logback/shutdown-context-listener/pom.xml
+++ b/logback/shutdown-context-listener/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>de.huxhorn.lilith.logback.servlet</artifactId>
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
-	<name>Logback Shutdown ServlectContextListener</name>
+	<name>Logback Shutdown ServletContextListener</name>
 	<description>This file is part of Lilith. It contains a ServletContextListener that shuts down logback.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 
