Work on ticket:21.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@248 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 		</site>
 
 		<!--
-			  scp doesn't work anymore
-			  -->
+		scp doesn't work anymore
+		-->
 		<repository>
 			<id>lilith-repos</id>
 			<url>sftp://web.sourceforge.net/home/groups/l/li/lilith/htdocs/repository</url>
@@ -45,6 +45,7 @@
 		<module>lilith-xml-logging</module>
 		<module>logback</module>
 		<module>log4j</module>
+		<module>jul</module>
 		<module>lilith-sounds</module>
 		<module>lilith</module>
 		<module>slf4j</module>
