Ongoing work on ticket:21.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@249 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -230,6 +230,12 @@
 				<artifactId>de.huxhorn.lilith.log4j.xml</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
+
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.jul.xml</artifactId>
+				<version>${lilithVersion}</version>
+			</dependency>
 			<!--
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
