--- a/logback/pom.xml
+++ b/logback/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.logback.master</artifactId>
-	<version><!-- LV -->0.9.35-SNAPSHOT</version>
+	<version><!-- LV -->0.9.35</version>
 	<packaging>pom</packaging>
 	<name>Lilith Logback master pom file</name>
 	<description>This file is part of Lilith. It's the master pom file that is used to build all logback modules.</description>
