--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.parent</artifactId>
-	<version><!-- LV -->0.9.35</version>
+	<version><!-- LV -->0.9.36-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Lilith parent pom file</name>
 	<description>This file is part of Lilith. It's the parent pom that contains general project informations.</description>
@@ -19,7 +19,7 @@
 
 	<properties>
 		<lilithVersion>${pom.version}</lilithVersion>
-		<sulkyVersion><!-- SV -->0.9.7</sulkyVersion>
+		<sulkyVersion><!-- SV -->0.9.8-SNAPSHOT</sulkyVersion>
 		<slf4jVersion>1.5.6</slf4jVersion>
 		<logbackVersion>0.9.15</logbackVersion>
 	</properties>
@@ -425,7 +425,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.5</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
