--- a/sandbox/jul-sandbox/pom.xml
+++ b/sandbox/jul-sandbox/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.35</version>
+		<version><!-- LV -->0.9.36-SNAPSHOT</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 
