--- a/lilith-data/access-protobuf/pom.xml
+++ b/lilith-data/access-protobuf/pom.xml
@@ -41,7 +41,6 @@
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
-			<version>2.0.3</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -54,8 +53,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<scope>compile</scope>
-			<!-- Because of MessageFormatter, might change later... -->
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
