--- a/lilith-data/logging-protobuf/pom.xml
+++ b/lilith-data/logging-protobuf/pom.xml
@@ -53,8 +53,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<scope>compile</scope>
-			<!-- Because of MessageFormatter, might change later... -->
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
