--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -317,6 +317,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.codehaus.groovy</groupId>
+				<artifactId>groovy</artifactId>
+				<version>1.6.3</version>
+			</dependency>
+
+			<dependency>
 				<groupId>commons-cli</groupId>
 				<artifactId>commons-cli</artifactId>
 				<version>1.0</version>
