--- a/jul/xml/pom.xml
+++ b/jul/xml/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.36</version>
+		<version><!-- LV -->0.9.37-SNAPSHOT</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 
