--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -492,6 +492,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<!-- <version>2.6.1</version> http://jira.codehaus.org/browse/MJAVADOC-268 -->
 				<version>2.5</version>
+				
 			</plugin>
 			<plugin>
 				<artifactId>maven-jxr-plugin</artifactId>
@@ -736,6 +737,11 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<links>
+						<link>http://java.sun.com/javase/6/docs/api/</link>
+					</links>
+				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
