--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -490,7 +490,8 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.6.1</version>
+				<!-- <version>2.6.1</version> http://jira.codehaus.org/browse/MJAVADOC-268 -->
+				<version>2.5</version>
 			</plugin>
 			<plugin>
 				<artifactId>maven-jxr-plugin</artifactId>
@@ -632,7 +633,8 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.6.1</version>
+					<!-- <version>2.6.1</version> http://jira.codehaus.org/browse/MJAVADOC-268 -->
+					<version>2.5</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-plugin-plugin</artifactId>
