--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.parent</artifactId>
@@ -11,13 +11,13 @@
 	</description>
 	<url>http://lilith.huxhorn.de/projects/</url>
 	<inceptionYear>2007</inceptionYear>
-
+	
 	<scm>
-		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith-parent</connection>
-		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith-parent</developerConnection>
-		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/lilith-parent/</url>
+		<connection>scm:git:git://lilith.git.sourceforge.net/gitroot/lilith/lilith</connection>
+		<developerConnection>scm:git:ssh://lilith.git.sourceforge.net/gitroot/lilith/lilith</developerConnection>
+		<url>http://lilith.git.sourceforge.net/git/gitweb.cgi?p=lilith/lilith</url>
 	</scm>
-
+	
 	<properties>
 		<lilithVersion>${pom.version}</lilithVersion>
 		<sulkyVersion><!-- SV -->0.9.9-SNAPSHOT</sulkyVersion>
@@ -27,7 +27,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
-
+	
 	<licenses>
 		<license>
 			<name>GNU General Public License v3 (GPL)</name>
@@ -35,12 +35,12 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-
+	
 	<issueManagement>
 		<system>trac</system>
 		<url>http://apps.sourceforge.net/trac/lilith/</url>
 	</issueManagement>
-
+	
 	<mailingLists>
 		<mailingList>
 			<name>Announce List</name>
@@ -64,7 +64,7 @@
 			<archive>http://sourceforge.net/mailarchive/forum.php?forum_name=lilith-devel</archive>
 		</mailingList>
 	</mailingLists>
-
+	
 	<distributionManagement>
 		<site>
 			<id>lilith.huxhorn.de</id>
@@ -81,7 +81,7 @@
 			<uniqueVersion>false</uniqueVersion>
 			<url>sftp://ftp.huxhorn.de/lilith/snapshot-repository</url>
 		</snapshotRepository>
-<!--
+		<!--
 		<repository>
 			<id>lilith-repos</id>
 			<url>sftp://web.sourceforge.net/home/groups/l/li/lilith/htdocs/repository</url>
@@ -91,7 +91,7 @@
 			<uniqueVersion>false</uniqueVersion>
 			<url>sftp://web.sourceforge.net/home/groups/l/li/lilith/htdocs/snapshot-repository</url>
 		</snapshotRepository>
--->
+		-->
 	</distributionManagement>
 
 	<!--
@@ -105,230 +105,289 @@
 				<artifactId>de.huxhorn.lilith.jul-slf4j-handler</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.sender</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.data.access</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.data.access.protobuf</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.data.eventsource-xml</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.data.eventsource</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.data.logging-xml-serializer</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.data.logging-xml</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.data.logging.protobuf</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.data.logging</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.engine</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.classic</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.appender.multiplex-core</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.appender.multiplex-access</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic-xml</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.sounds</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.xml-logging</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.event-producers</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.logging-adapter</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.access-adapter</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.servlet</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.log4j.xml</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.jul.xml</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
+
+			<!-- Start of 3rd party jars -->
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.3rdparty.flyingsaucer.core-renderer</artifactId>
+				<version>8RC1</version>
+				<!--
+				<groupId>flyingsaucer</groupId>
+				<artifactId>core-renderer</artifactId>
+				<version>8Pre2</version>
+				-->
+			</dependency>
+			
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.3rdparty.jgroups-all</artifactId>
+				<version>2.6.8.GA</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.3rdparty.jmdns</artifactId>
+				<version>2.0-patched</version>
+				<!--
+				<groupId>jmdns</groupId>
+				<artifactId>jmdns</artifactId>
+				<version>2.1-SNAPSHOT</version>
+				-->
+			</dependency>
+			
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.3rdparty.junique</artifactId>
+				<version>1.0.2</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.3rdparty.macify</artifactId>
+				<version>1.1</version>
+				<!--
+				<groupId>org.simplericity.macify</groupId>
+				<artifactId>macify</artifactId>
+				<version>1.0</version>
+				-->
+			</dependency>
+			
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.3rdparty.rrd4j</artifactId>
+				<version>2.0.5</version>
+				<!--
+				<groupId>rrd4j</groupId>
+				<artifactId>rrd4j</artifactId>
+				<version>2.0.5</version>
+				-->
+			</dependency>
+			<!-- End of 3rd party jars -->
+
 			<!--
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logging-repository-ws</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-		   -->
-
+			-->
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.stax</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.codec</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.buffers</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.formatting</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.io</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.junit</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.logging</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.sounds-impl-jlayer</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.swing</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.tasks</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.conditions</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.codec.filebuffer</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
@@ -340,13 +399,13 @@
 				<artifactId>joda-time</artifactId>
 				<version>1.6</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>org.codehaus.groovy</groupId>
 				<artifactId>groovy</artifactId>
 				<version>1.6.5</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>commons-cli</groupId>
 				<artifactId>commons-cli</artifactId>
@@ -358,25 +417,25 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>com.google.protobuf</groupId>
 				<artifactId>protobuf-java</artifactId>
 				<version>2.2.0</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
 				<version>2.3</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>1.3.1</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>commons-httpclient</groupId>
 				<artifactId>commons-httpclient</artifactId>
@@ -393,44 +452,49 @@
 				<version>4.0</version>
 				-->
 			</dependency>
-
-
+			
+			<dependency>
+				<groupId>stax</groupId>
+				<artifactId>stax</artifactId>
+				<version>1.2.0</version>
+			</dependency>
+			
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.7</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4jVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>jcl-over-slf4j</artifactId>
 				<version>${slf4jVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>log4j-over-slf4j</artifactId>
 				<version>${slf4jVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-core</artifactId>
 				<version>${logbackVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
 				<version>${logbackVersion}</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-access</artifactId>
@@ -438,7 +502,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
+	
 	<developers>
 		<developer>
 			<id>huxhorn</id>
@@ -451,7 +515,7 @@
 			</roles>
 		</developer>
 	</developers>
-
+	
 	<reporting>
 		<plugins>
 			<!-- missing git support
@@ -541,7 +605,7 @@
 				<artifactId>javancss-maven-plugin</artifactId>
 				<version>2.0</version>
 			</plugin>
-
+			
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jdepend-maven-plugin</artifactId>
@@ -583,7 +647,7 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
+	
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -672,7 +736,7 @@
 					<artifactId>maven-war-plugin</artifactId>
 					<version>2.1-beta-1</version>
 				</plugin>
-
+				
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>cobertura-maven-plugin</artifactId>
@@ -703,7 +767,7 @@
 					<failOnError>false</failOnError>
 				</configuration>
 			</plugin>
-
+			
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<executions>
