--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith</artifactId>
@@ -9,20 +9,14 @@
 	<name>Lilith</name>
 	<description>Lilith is a logging and access event viewer for the Logback logging framework. It has features comparable to Chainsaw, a logging event viewer for log4j. This means that it can receive logging events from remote applications using Logback as their logging backend. It uses files to buffer the received events locally, so it is possible to keep vast amounts of logging events at your fingertip while still being able to check only the ones you are really interested in by using filtering conditions.</description>
 	<url>http://lilith.huxhorn.de/</url>
-
-	<scm>
-		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith</connection>
-		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith</developerConnection>
-		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/lilith/</url>
-	</scm>
-
+	
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
 		<version><!-- LV -->0.9.37-SNAPSHOT</version>
 		<relativePath>../lilith-parent/pom.xml</relativePath>
 	</parent>
-
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -30,12 +24,12 @@
 				<artifactId>osxappbundle-maven-plugin</artifactId>
 				<version>1.0-alpha-2</version>
 				<!--
-								<version>1.0-alpha-1</version>
-								-->
+				<version>1.0-alpha-1</version>
+				-->
 				<configuration>
 					<!--
-								   <dictionaryFile>${basedir}/src/main/mac-resources/Info.plist</dictionaryFile>
-								   -->
+					<dictionaryFile>${basedir}/src/main/mac-resources/Info.plist</dictionaryFile>
+					-->
 					<jvmVersion>1.5+</jvmVersion>
 					<mainClass>de.huxhorn.lilith.Lilith</mainClass>
 					<iconFile>${basedir}/src/main/mac-resources/Lilith.icns</iconFile>
@@ -52,7 +46,7 @@
 					</execution>
 				</executions>
 			</plugin>
-
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -105,63 +99,56 @@
 		</resources>
 		<finalName>lilith</finalName>
 	</build>
-
+	
 	<dependencies>
-		<!--
-		  <dependency>
-			  <groupId>de.huxhorn.lilith</groupId>
-			  <artifactId>de.huxhorn.lilith.data.logging-xml-serializer</artifactId>
-			  <scope>compile</scope>
-		  </dependency>
-  -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-access</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.logback.event-producers</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.data.logging</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.data.logging.protobuf</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.data.access</artifactId>
@@ -173,17 +160,6 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.3rdparty.macify</artifactId>
-			<version>1.1</version>
-			<!--
-					 <groupId>org.simplericity.macify</groupId>
-					 <artifactId>macify</artifactId>
-					 <version>1.0</version>
-					 -->
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
 			<groupId>com.jgoodies</groupId>
 			<artifactId>looks</artifactId>
 			<version>2.2.0</version>
@@ -191,21 +167,10 @@
 		</dependency>
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.3rdparty.jmdns</artifactId>
-			<version>2.0-patched</version>
-			<!--
-					 <groupId>jmdns</groupId>
-					 <artifactId>jmdns</artifactId>
-					 <version>2.1-SNAPSHOT</version>
-					 -->
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.jul-slf4j-handler</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic</artifactId>
@@ -221,31 +186,31 @@
 			<artifactId>de.huxhorn.lilith.logback.appender.multiplex-access</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.xml-logging</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.logback.logging-adapter</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.log4j.xml</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.jul.xml</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -258,13 +223,13 @@
 			<artifactId>groovy</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.logging</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.sounds-impl-jlayer</artifactId>
@@ -275,56 +240,47 @@
 			<artifactId>de.huxhorn.sulky.buffers</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.swing</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.tasks</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.io</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		<!-- commons-lang dependency below is needed to override 1.0 dependency
-						from commons-cli -->
+
+		<!--
+		commons-lang dependency below is needed to override 1.0 dependency
+		from commons-cli
+		-->
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.3rdparty.rrd4j</artifactId>
-			<version>2.0.5</version>
-			<!--
-					 <groupId>rrd4j</groupId>
-					 <artifactId>rrd4j</artifactId>
-					 <version>2.0.5</version>
-					 -->
-			<scope>compile</scope>
-		</dependency>
-
+		
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
@@ -343,39 +299,19 @@
 			<version>1.0.0</version>
 		</dependency>
 		-->
-
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.sounds</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>stax</groupId>
 			<artifactId>stax</artifactId>
-			<version>1.2.0</version>
 			<scope>runtime</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.3rdparty.flyingsaucer.core-renderer</artifactId>
-			<version>8RC1</version>
-			<!--
-			<groupId>flyingsaucer</groupId>
-			<artifactId>core-renderer</artifactId>
-			<version>8Pre2</version>
-			-->
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.3rdparty.junique</artifactId>
-			<version>1.0.2</version>
-			<scope>compile</scope>
-		</dependency>
-
+		
 		<!--
 		<dependency>
 			<groupId>org.swinglabs</groupId>
@@ -384,6 +320,58 @@
 		</dependency>
 		-->
 
+		<!-- Start of 3rd party jars -->
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.3rdparty.flyingsaucer.core-renderer</artifactId>
+			<!--
+			<groupId>flyingsaucer</groupId>
+			<artifactId>core-renderer</artifactId>
+			<version>8Pre2</version>
+			-->
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.3rdparty.jmdns</artifactId>
+			<!--
+			<groupId>jmdns</groupId>
+			<artifactId>jmdns</artifactId>
+			<version>2.1-SNAPSHOT</version>
+			-->
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.3rdparty.junique</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.3rdparty.macify</artifactId>
+			<!--
+			<groupId>org.simplericity.macify</groupId>
+			<artifactId>macify</artifactId>
+			<version>1.0</version>
+			-->
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.3rdparty.rrd4j</artifactId>
+			<!--
+			<groupId>rrd4j</groupId>
+			<artifactId>rrd4j</artifactId>
+			<version>2.0.5</version>
+			-->
+			<scope>compile</scope>
+		</dependency>
+		<!-- End of 3rd party jars -->
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -391,3 +379,4 @@
 		</dependency>
 	</dependencies>
 </project>
+
