--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.master</artifactId>
@@ -9,13 +9,13 @@
 	<name>Lilith master pom file</name>
 	<description>This file is part of Lilith. It's the master pom file that is used to build all other modules.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
-
+	
 	<scm>
-		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk</connection>
-		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk</developerConnection>
-		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/</url>
+		<connection>scm:git:git://lilith.git.sourceforge.net/gitroot/lilith/lilith</connection>
+		<developerConnection>scm:git:ssh://lilith.git.sourceforge.net/gitroot/lilith/lilith</developerConnection>
+		<url>http://lilith.git.sourceforge.net/git/gitweb.cgi?p=lilith/lilith</url>
 	</scm>
-
+	
 	<distributionManagement>
 		<site>
 			<id>lilith.huxhorn.de</id>
@@ -35,7 +35,7 @@
 			<url>sftp://web.sourceforge.net/home/groups/l/li/lilith/htdocs/snapshot-repository</url>
 		</snapshotRepository>
 	</distributionManagement>
-
+	
 	<modules>
 		<module>lilith-parent</module>
 		<module>lilith-sender</module>
@@ -49,7 +49,7 @@
 		<module>lilith</module>
 		<module>slf4j</module>
 	</modules>
-
+	
 	<reporting>
 		<plugins>
 			<plugin>
@@ -83,9 +83,9 @@
 					</groups>
 				</configuration>
 			</plugin>
-
+		
 		</plugins>
-
+	
 	</reporting>
 
 
