--- a/sandbox/jgroups-sandbox/pom.xml
+++ b/sandbox/jgroups-sandbox/pom.xml
@@ -9,19 +9,13 @@
 	<description>This file is part of Lilith. It's a jgroup sandbox.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
-	<scm>
-		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/sandbox/jgroups-sandbox</connection>
-		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/sandbox/jgroups-sandbox</developerConnection>
-		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/sandbox/kgroups-sandbox/</url>
-	</scm>
-
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
 		<version><!-- LV -->0.9.37-SNAPSHOT</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
-
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -74,40 +68,39 @@
 		</resources>
 		<finalName>jgroups-sandbox</finalName>
 	</build>
-
+	
 	<dependencies>
-
-        <dependency>
+		
+		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.3rdparty.jgroups-all</artifactId>
-			<version>2.6.8.GA</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <scope>compile</scope>
-        </dependency>
-
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic</artifactId>
@@ -118,14 +111,17 @@
 			<artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic-xml</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		<!-- commons-lang dependency below is needed to override 1.0 dependency
-		from commons-cli -->
+
+		<!-- 
+		commons-lang dependency below is needed to override 1.0 dependency
+		from commons-cli 
+		-->
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -139,3 +135,4 @@
 		</dependency>
 	</dependencies>
 </project>
+
