--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -418,6 +418,12 @@
 				</exclusions>
 			</dependency>
 			
+            <dependency>
+                <groupId>org.swinglabs</groupId>
+                <artifactId>swingx</artifactId>
+                <version>1.0</version>
+            </dependency>
+
 			<dependency>
 				<groupId>com.google.protobuf</groupId>
 				<artifactId>protobuf-java</artifactId>
