--- a/lilith-constants/pom.xml
+++ b/lilith-constants/pom.xml
@@ -3,11 +3,11 @@
 		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
-	<artifactId>de.huxhorn.lilith.engine</artifactId>
+	<artifactId>de.huxhorn.lilith.constants</artifactId>
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
-	<name>Lilith Engine</name>
-	<description>This file is part of Lilith. It contains the engine part of Lilith.</description>
+	<name>Lilith API (Constants)</name>
+	<description>This file is part of Lilith. It contains part of the Lilith API (Constants).</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<parent>
@@ -18,12 +18,6 @@
 	</parent>
 	
 	<dependencies>
-		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.constants</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.sender</artifactId>
