Changed SLF4J to 1.5.11 and Logback to 0.9.19-SNAPSHOT.

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -21,8 +21,8 @@
 	<properties>
 		<lilithVersion>${pom.version}</lilithVersion>
 		<sulkyVersion><!-- SV -->0.9.10-SNAPSHOT</sulkyVersion>
-		<slf4jVersion>1.5.10</slf4jVersion>
-		<logbackVersion>0.9.18</logbackVersion>
+		<slf4jVersion>1.5.11</slf4jVersion>
+		<logbackVersion>0.9.19-SNAPSHOT</logbackVersion>
 		<!-- The following lines prevent "[WARNING] Using platform encoding[..]" messages -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
