--- a/lilith-engine/pom.xml
+++ b/lilith-engine/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.38-SNAPSHOT</version>
+		<version><!-- LV -->0.9.38</version>
 		<relativePath>../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
