--- a/log4j/pom.xml
+++ b/log4j/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.log4j.master</artifactId>
-	<version><!-- LV -->0.9.38-SNAPSHOT</version>
+	<version><!-- LV -->0.9.38</version>
 	<packaging>pom</packaging>
 	<name>Lilith log4j master pom file</name>
 	<description>This file is part of Lilith. It's the master pom file that is used to build log4j modules.</description>
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.38-SNAPSHOT</version>
+		<version><!-- LV -->0.9.38</version>
 		<relativePath>../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
