--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -306,11 +306,19 @@
 		</dependency>
 		-->
 
+		<!--
         <dependency>
             <groupId>org.swinglabs</groupId>
             <artifactId>swingx</artifactId>
             <scope>compile</scope>
         </dependency> 
+		-->
+		
+		<dependency>
+			<groupId>net.java.dev.glazedlists</groupId>
+			<artifactId>glazedlists_java15</artifactId>
+			<scope>compile</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
@@ -324,14 +332,6 @@
 			<scope>runtime</scope>
 		</dependency>
 		
-		<!--
-		<dependency>
-			<groupId>org.swinglabs</groupId>
-			<artifactId>swingx</artifactId>
-			<version>0.9.2</version>
-		</dependency>
-		-->
-
 		<!-- Start of 3rd party jars -->
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
