--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -286,16 +286,19 @@
 			<artifactId>commons-io</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		
+
+		<!--
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<scope>compile</scope>
-			<!-- This will likely move to:
+		</dependency>
+		-->
+		
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.0</version>
-			-->
+			<scope>compile</scope>
 		</dependency>
 
 		<!--
