--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 		<module>log4j</module>
 		<module>jul</module>
 		<module>lilith-sounds</module>
+		<module>lilith-prefs</module>
 		<module>lilith</module>
 		<module>slf4j</module>
 		<module>tracing</module>
